# text-to-sql

./: .env.example  .gitignore  auth.py  config.py  docker-compose.yml  requirements.txt
backend/: .env.example  README.md  auth.py  dependencies.py  main.py  pyproject.toml
backend/ag2/: agents.py  manager.py  tools.py
backend/api/: auth.py
backend/app/: dependencies.py  main.py
backend/app/api/: admin.py  auth.py  chat.py  config.py  datasets.py  query.py  superadmin.py
backend/app/core/: config.py  jwt.py  security.py
backend/app/db/: database.py  seed_data.py
backend/app/models/: __init__.py  company.py  dataset.py  exchange_listing.py  industry.py  quarterly_result.py  sector.py  user.py
backend/app/schemas/: api.py  auth.py  query_schemas.py
backend/app/services/: __init__.py  admin_platform_service.py  audit_log_service.py  chat_history_service.py  dataset_service.py  user_service.py
backend/caches/: redis_client.py
backend/core/: config.py  jwt.py  security.py
backend/db/: __init__.py  database.py
backend/models/: __init__.py  company.py  dataset.py  exchange_listing.py  industry.py  quarterly_result.py  sector.py  user.py
backend/prompts/: agent_prompts.py
backend/services/: __init__.py  audit_log_service.py  chat_history_service.py  dataset_service.py  user_service.py
db/: __init__.py  audit_logs.py  chat_history.py  connection.py  datasets.py  users.py
db/db/: audit_logs.py  datasets.py
frontend/: .oxfmtrc.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
sql/: 03_auth_setup.sql
(+36 files in other folders)
